--- a/src/RatingStudio.Avalonia/RatingStudio.Avalonia.csproj
+++ b/src/RatingStudio.Avalonia/RatingStudio.Avalonia.csproj
@@ -22,4 +22,7 @@
         <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.18" />
         <PackageReference Include="XamlNameReferenceGenerator" Version="1.3.4" />
     </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\RatingStudio.Domain\RatingStudio.Domain.csproj" />
+    </ItemGroup>
 </Project>
